New updated files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\vpaol_000\Desktop\Web Development Bootcamp\Web Development\HTML Personal Site\Images\113936171_165906075044871_2125245642801387104_o.jpg" alt="Profile Picture of A Plus Media" width="200" height="200"></td>
+      <td><img src="C:\Users\vpaol_000\Desktop\Web Development Bootcamp\Web Development\HTML Personal Site\Images\2x2 No Nametag.jpg" alt="Profile Picture of A Plus Media" width="200" height="200"></td>
       <td>
         <h1>Engr. Victor Sanchez</h1>
 
@@ -28,7 +28,7 @@
   <ul>
     <li><u>Southern Luzon State University</u></li>
     <ul>
-      <li><strong>BS in Electrical Engineering with a GWA of </strong></li>
+      <li><strong>BS in Electrical Engineering with a GWA of 1.Something </strong></li>
     </ul>
     <li><u>Quezon National High School</u></li>
     <li><u>Magill Memorial School</u></li>
